--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         </nav>
         <section id="home">
             <div class="image left">
-                <img src="./3.jpeg" alt="">
+                <img src="https://github.com/ckaur1Unh/imageshold/blob/main/3.jpeg?raw=true" alt="">
             </div>
             <div class="title-right" id = "intro">
                 <h1>
@@ -117,7 +117,7 @@
             <ul>
                 <li>
                     <div class="review-img-box">
-                        <img src="./user.png" alt="" class="review-user-img">
+                        <img src="https://github.com/ckaur1Unh/imageshold/blob/main/user.png?raw=true" alt="" class="review-user-img">
                     </div>
                     <div class="name">
                         Review 1
@@ -144,7 +144,7 @@
             </div>
             <div class="right">
                 <div class="img-container">
-                    <img src="./2.jpeg" alt="">
+                    <img src="https://github.com/ckaur1Unh/imageshold/blob/main/2.jpeg?raw=true" alt="">
                 </div>
             </div>
         </section>
@@ -181,20 +181,20 @@
             </div>
         </section>
         <footer>
-            <ul>
-                <li>
-                    <img src="./icons8-github-60.png" alt="">
-                </li>
-                <li>
-                    <img src="./icons8-twitter-96.png" alt="">
-                </li>
-                <li>
-                    <img src="./icons8-linkedin-circled-96.png" alt="">
-                </li>
-                <li>
-                    <img src="./icons8-instagram-96.png" alt="">
-                </li>
-            </ul>
+           <ul>
+            <li>
+                <img src="https://github.com/ckaur1Unh/imageshold/blob/main/icons8-github-60.png?raw=true" alt="">
+            </li>
+            <li>
+                <img src="https://github.com/ckaur1Unh/imageshold/blob/main/icons8-twitter-96.png?raw=true" alt="">
+            </li>
+            <li>
+                <img src="https://github.com/ckaur1Unh/imageshold/blob/main/icons8-linkedin-circled-96.png?raw=true" alt="">
+            </li>
+            <li>
+                <img src="https://github.com/ckaur1Unh/imageshold/blob/main/icons8-instagram-96.png?raw=true" alt="">
+            </li>
+        </ul>
         </footer>
     </div>
     <script>
